@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** October 06, 2013 **
+Fixed a bug regarding unicode strings.
+
 ** October 02, 2013 **
 The package preferences has been analyzed with pylint.
 
